--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ resume_social_links:
   # resume_twitter_url:           "http://twitter.com/jglovier"
   # resume_dribbble_url:          "https://dribbble.com/jag"
   # resume_facebook_url:          "insert Facebook URL here"
-  resume_linkedin_url:          "https://www.linkedin.com/in/dhruvajyoth-kommuri-49425a26a/"
+  # resume_linkedin_url:          "https://www.linkedin.com/in/dhruvajyoth-kommuri-49425a26a/"
   # resume_instagram_url:         "insert your Instagram URL here"
   resume_website_url:           "https://dhruvajyothk.github.io/"
   # resume_medium_url:            "https://medium.com/@jglovier"
